--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,6 +98,14 @@ services:
     networks:
       - laravel
 
+  npm:
+    image: node:13.7
+    container_name: npm
+    volumes:
+      - ./var/www/html
+    working_dir: /var/www/html
+    entrypoint: ["npm"]
+
 volumes:
   pgsql:
     driver: local
